--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Meu primeiro site</h1>
-    <p>Meu primeiro site está sendo feito junto de um curso da DIO</p>
+    
+    <section class="content">
+        <h1>Pokedex</h1>
 
-    <button id="btnTeste" type="button">
-        Teste
-    </button>
+        <ol>
+            <li>
+                Bulasaur
+            </li>
+            <li>
+                Ivysaur
+            </li>
+            <li>
+                Venusaur
+            </li>
+        </ol>
+    </section>
 
     <script src="./assets/js/main.js" defer></script>
 </body>
